--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>عيد أضحى مبارك</title>
+  <meta charset="UTF-8" />
+  <title>عيد أضحى مبارك - إسلام محمد</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-image: url('https://i.imgur.com/Q7jTn3v.jpg'); /* خلفية العيد */
+      background-image: url('https://images.unsplash.com/photo-1629656226989-c8654181764d?auto=format&fit=crop&w=1350&q=80');
       background-size: cover;
-      background-position: center;
+      background-position: center center;
+      background-repeat: no-repeat;
       color: white;
       text-align: center;
       height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      text-shadow: 2px 2px 4px #000;
+      text-shadow: 2px 2px 5px #000000cc;
     }
 
     h1 {
@@ -55,5 +56,3 @@
   </div>
 </body>
 </html>
-
-
