--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
-      color: white;
+      color: black;
       text-align: center;
       height: 100vh;
       display: flex;
